- Fixed readme, I think it's almost done! We can talk about it over ICQ on Monday or Tuesday before we release.  - Added two more missions from people who gave us permission. Please feel free to change titles or descriptions.
Not important for release, read later if you like:
 - Updated lots of comments, please take a look and respond when you have time (after the release)
 - You can now only select your own units/houses
 - Minor fixes

--- a/Release/Readme.html
+++ b/Release/Readme.html
@@ -25,30 +25,15 @@ Brought to you by Krom and Lewin</font></P><hr>
 		</tr>
 	</table>
 </blockquote>
-<p><font face="Calibri">KaM Remake (we don't have a fancy title yet) is an attempt to reinvent original &quot;Knights and Merchants: The Shattered Kingdom&quot; strategy game.
-This is the first public limited technology preview (demo) featuring the economy part of the game 
-(referred as &quot;mod&quot; or &quot;Remake&quot; further on). Our aim is to demonstrate the 
+<p><font face="Calibri">KaM Remake (we don't have a fancy title yet) is an attempt to reinvigorate the original &quot;Knights and Merchants: The Shattered Kingdom&quot; strategy game. Our goals are to make it work on today's computers and operating systems, as well as to fix the many bugs in the game engine. To do this we have started from scratch, writing our own code for the game engine but using the original resource files.
+This is the first public limited technology preview (demo) featuring the economic side of the game; referred as &quot;mod&quot; or &quot;Remake&quot; from now on. Our aim is to demonstrate the 
 potential and get feedback on functionality. All included &quot;assets&quot; borrowed from 
-KaM are there for testing purposes only. Final release will not include any of 
+KaM (graphics, music, sounds, etc.) are there for testing purposes only, and the final release will not include any of the 
 copyrighted &quot;assets&quot;.<br>
-We assume that you own the original KaM game, in other case you should buy it - 
-it's available in number of online gaming stores.<br>
-KaM Remake executable<span style="background-color: #FFFF00"> (we own only exe 
-file, right?) </span>is freeware and is 
-built by enthusiasts. Applications used: Delphi6, OpenGL, OpenAL, zLib.</font></p>
-<p><font face="Calibri"><span style="background-color: #FFFF00">I think we can put it as follows: KaM 
-Remake is a mod (sic!) for original KaM TSK/TPR, some kind of alternative exe. This way 
-we rely only on files owned by end user. And as your father noted - this demo is 
-a &quot;limited technology preview&quot; only. Later on we could wrap this in a 
-way that we upload only KaM_Remake.exe and a script to convert all files/paths 
-to Remake format.</span></font></p>
-<p><span style="background-color: #FFFF00"><font face="Calibri">Show the text to 
-your father once again plz. Least of all we need troubles with copyrights.. And 
-I will ask a friend of mine for same matter meanwhile.</font></span></p>
-<p><font face="Calibri">You wake up in a medieval age in a land ruled by a king. Your goal is to build 
-your own kingdom. You don't have direct control for it's not a leaders job to 
-sort out such small matters. You control really important things: economy, 
-building and later on - army.</font></p>
+We assume that you own the original KaM game, otherwise you should buy it - 
+it's available in a number of online gaming stores.<br>
+The KaM Remake executable is freeware and is 
+built by enthusiasts. Applications used: Delphi6, OpenGL, OpenAL, zLib.</font><BR>&nbsp;</p>
 <blockquote>
 	<table border="0" cellspacing="0" cellpadding="0">
 		<tr>
@@ -63,7 +48,7 @@ building and later on - army.</font></p>
 &nbsp;&nbsp;&nbsp; 500MHz or faster processor;<br>
 &nbsp;&nbsp;&nbsp; 256MB or more of RAM; <br>
 &nbsp;&nbsp;&nbsp; 3D graphics accelerator OpenGL 1.4 compliant;<br>
-&nbsp;&nbsp;&nbsp; Sound card.</font></p>
+&nbsp;&nbsp;&nbsp; Sound card.<br>&nbsp;</font></p>
 <blockquote>
 	<table border="0" cellspacing="0" cellpadding="0">
 		<tr>
@@ -73,16 +58,15 @@ building and later on - army.</font></p>
 		</tr>
 	</table>
 </blockquote>
-<p><font face="Calibri">Unpack all files contained in the package into new 
+<p><font face="Calibri"><B>1.</B> Unpack all files contained in the package into a new 
 folder on your PC.<br>
-Package includes OpenAL audio drivers (<b>oalinst.exe</b>). 
-You might need to install them to play the KaM Remake. Latest version can be 
-found on official OpenAl page:
+<B>2.</B> The package includes the OpenAL audio drivers (<b>oalinst.exe</b>), which you should install in order to play the KaM Remake. The latest version can be found on the official OpenAl page:
 <a href="http://connect.creativelabs.com/openal/default.aspx">
 http://connect.creativelabs.com/openal/default.aspx</a> <br>
-KaM Remake uses OpenGL rendering engine, so you need to have OpenGL drivers 
+<B>3.</B> The KaM Remake uses the OpenGL rendering engine, so you need to have OpenGL drivers 
 installed as well. Visit your graphics card manufacturer site to get the latest 
-drivers available.<br>Launch the mod - KaM_Remake.exe.<BR>&nbsp;</font></p>
+drivers available.
+<br><B>4.</B> Launch the mod - KaM_Remake.exe.<br>&nbsp;</font></p>
 <blockquote>
 	<table border="0" cellspacing="0" cellpadding="0">
 		<tr>
@@ -93,24 +77,24 @@ drivers available.<br>Launch the mod - KaM_Remake.exe.<BR>&nbsp;</font></p>
 	</table>
 </blockquote>
 <p>
-<font face="Calibri"><B>The following shortcuts are available in game:</B><br>
-<b>F8</b> speeds up the game pace x10 times<br>
+<font face="Calibri"><B>The following shortcuts are available in the game:</B><br>
+<b>F8</b> speeds up the game pace x10<br>
 <b>F11 </b>will show debugging panel and menu<br>
-<b>Mouse wheel</b> scrolling it will zoom in and out<b><br>
-&#8592; </b>backspace will reset zoom back to default 100%<b><br>
+Scrolling the <b>Mouse wheel</b> will zoom in and out<b><br>
+&#8592; </b>backspace will reset zoom back to 100%<b><br>
 P</b> pauses the game<br>
-<b>&#8592;&#8593;&#8594;&#8595;</b> cursor keys will scroll the view in game<br>
+<b>&#8592;&#8593;&#8594;&#8595;</b> cursor keys will move you around the map<br>
 <b>Middle mouse click</b> will place a scout at the cursor to allow you to explore 
 the map<br></font></p>
-<p><font face="Calibri"><B>Installing addon maps:</B><br><B>1.</B> Create a sub-folder in Maps folder of KaM Remake, name it i.e. &quot;My New Map&quot;.<br>
+<p><font face="Calibri"><B>Installing add-on maps:</B><br><B>1.</B> Create a sub-folder in the Maps folder of the KaM Remake and name it, for example, &quot;My New Map&quot;.<br>
 <B>2.</B> Put inside .dat and .map files of the map and name them accordingly &quot;My New Map.dat&quot; and &quot;My New Map.map&quot;. 
 File names should match folder name exactly.<br><B>3.</B> You can also make an 
 optional file called &quot;My New Map.txt&quot; which will contain the 
-mission description and some other information. Use the same format as in the missions provided 
-with Remake. No official format information will be released because this file will probably be changed later on.</font></p>
-<p><font face="Calibri"><b>Adding custom music:<br>
-1.</b> You can put your mp3 files into Music folder of KaM Remake, they will be 
-included into playlist automatically.</font></p>
+mission description and other information. Use the same format as the missions provided 
+with the Remake. No official format information will be released because this file will probably be changed later on.</font></p>
+<p><font face="Calibri"><b>Adding custom music:</b><br>
+You can put your MP3 files into the Music folder of the KaM Remake, and they will be 
+included into the playlist automatically.<br>&nbsp;</font></p>
 <blockquote>
 	<table border="0" cellspacing="0" cellpadding="0">
 		<tr>
@@ -123,18 +107,16 @@ included into playlist automatically.</font></p>
 <P>
 <font face="Calibri"><B>Silent crashes:</B><br>
 KaM Remake silently crashes on loading or music track change if there are any 
-problems with Windows sound system. Remove &quot;Music&quot; folder from KaM Remake, 
-this should help.<br></p>
-<p><B>Low framerate:</B><br>If you have ridiculously low framerate this could mean your OpenGL drivers are 
-out of date. See OpenGL version info in main menu top-left corner. It should be 
-at least 1.4.x. If it's any less you need to update your graphics card drivers 
-(check card manufacturers website for that matter).<br></p>
-<p><B>Assertion failed errors:</B><br>Sometimes when something unexpectedly happen you will get a &quot;Assertion failed&quot; 
-message. In this case you should terminate KaM_Remake from Task Manager (press 
-Ctrl+Alt+Del, choose KaM Remake and press End Task button). Browse to KaM Remake 
-folder and find KaM.log file containing details of the crash. Please send this 
-file by email either to Krom (<a href="mailto:kromster80@gmail.com">kromster80@gmail.com</a>) or Lewin (<a href="mailto:lewinjh@gmail.com">lewinjh@gmail.com</a>) along with details of what you did to make it crash and any other information that might be of use.</font><br>
-&nbsp;</P>
+problems with the Windows sound system. Removing the &quot;Music&quot; folder from the KaM Remake should fix this.<br></p>
+<p><B>Low framerate:</B><br>If you have ridiculously low framerate it be because your OpenGL drivers are 
+out of date. See the OpenGL version information in the top-left corner of the main menu, it should be 
+at least 1.4.x. If it is less you need to update your graphics card drivers 
+(check your card manufacturers website).<br></p>
+<p><B>Assertion failed errors:</B><br>Sometimes when something unexpected happens you will get an &quot;Assertion failed&quot; 
+message. In this case you should terminate the KaM_Remake from the Task Manager (press 
+Ctrl+Alt+Del, choose KaM Remake and press End Task button).
+<BR>Then browse to the KaM Remake folder and find the file &quot;KaM.log&quot; containing details of the crash. Please send this 
+file by email either to Krom (<a href="mailto:kromster80@gmail.com">kromster80@gmail.com</a>) or Lewin (<a href="mailto:lewinjh@gmail.com">lewinjh@gmail.com</a>) along with details of what you did to make it crash and any other information that might be of use.</font><br>&nbsp;</P>
 <blockquote>
 	<table border="0" cellspacing="0" cellpadding="0">
 		<tr>
@@ -145,14 +127,13 @@ limitations</a></FONT></B></td>
 		</tr>
 	</table>
 </blockquote>
-<p><font face="Calibri">Main menu has fixed 1024x768 size irregardless of window 
+<p><font face="Calibri">Main menu has fixed size of 1024x768 regardless of window 
 size or fullscreen mode.<br>
 Only single-player maps are supported (ones with !SET_HUMAN_PLAYER line).<br>
 Units will go through one another.<br>
-Fisherman won't go for fish.<br>
-Unit training in Barracks and Town Hall isn't functioning.<br>
-Citizens won't go to eat if they are standing off the road.<br>
-&nbsp;</font></p>
+Fisherman does not catch fish.<br>
+Unit training in the Barracks and Town Hall is not functioning.<br>
+Citizens do not go to eat if they are standing off the road.<br>&nbsp;</font></p>
 <blockquote>
 	<table border="0" cellspacing="0" cellpadding="0">
 		<tr>
@@ -162,13 +143,12 @@ Citizens won't go to eat if they are standing off the road.<br>
 		</tr>
 	</table>
 </blockquote>
-<font face="Calibri">Please use <A href="http://www.atfreeforum.com/knights/viewtopic.php?t=233&mforum=knights">the forum</A> to give 
-us feedback. Most of the bugs are probably known, but we would love your feedback, suggestions, complements, etc.
+<font face="Calibri">Please use <A href="http://www.atfreeforum.com/knights/viewtopic.php?t=233&mforum=knights">the forum</A> or email (see below) to give us feedback. Most of the bugs are probably known, but we would love your comments, suggestions, compliments, etc.
 <br>
-If you can offer some help in Delphi coding (AI, network), menu design, ideas 
-for improvements - please write in the forum as well.
-  </font>
-  &nbsp;<blockquote>
+If you can offer some help in Delphi coding, menu design, ideas 
+for improvement - please drop us an email or write on the forum.</font>
+<br>&nbsp;
+<blockquote>
 	<table border="0" cellspacing="0" cellpadding="0">
 		<tr>
 			<td>
@@ -178,35 +158,31 @@ for improvements - please write in the forum as well.
 		</tr>
 	</table>
 </blockquote>
-  <font face="Calibri">Lead programmer - Krom (<a href="mailto:kromster80@gmail.com">kromster80@gmail.com</a>)<br>
+<font face="Calibri">Lead programmer - Krom (<a href="mailto:kromster80@gmail.com">kromster80@gmail.com</a>)<br>
 Programmer - Lewin (<a href="mailto:lewinjh@gmail.com">lewinjh@gmail.com</a>)<br>
-Thanks to Alex who introduced core design back in 2008<br>
-Huge thanks to KaM community and its active members (Free_sms_kam, Harold, JBSnorro, 
-The Knight, Litude (Real Hotdog), Merchator, Nick, Thunderwolf and many others) who helped us with decoding, advice, ideas and encouragement.</font>
-  &nbsp;<blockquote>
+Thanks to Alex who introduced the core design back in 2008<br>
+Huge thanks to the KaM community and its active members (Free_sms_kam, Harold, JBSnorro, 
+The Knight, Litude (Real Hotdog), Merchator, Nick, Thunderwolf and many others) who helped us with decoding, advice, ideas and encouragement.<br>&nbsp;</font>
+<blockquote>
 	<table border="0" cellspacing="0" cellpadding="0">
 		<tr>
 			<td>
-	<img border="0" src="Readme/GUI_0314.gif" width="26" height="25"></td>
+	<img border="0" src="Readme/GUI_0322.gif" width="26" height="25"></td>
 			<td><span style="vertical-align: middle"><B>
-			<FONT size="+2" face="Calibri">&nbsp;<a name="Credits0">Legal notice</a></FONT></B></span></td>
+			<FONT size="+2" face="Calibri">&nbsp;<a name="Legal">Legal notice</a></FONT></B></span></td>
 		</tr>
 	</table>
-</blockquote>
-  <font face="Calibri"><span style="background-color: #FFFF00">Add new icon ^ 
-here please! =)<br>
-</span>Commercial use is prohibited.<br>
-Any used names, symbols or other copyrighted stuff is property of their owners.<br>
-We do not take any responsibility in case this mod harms your software or 
+</blockquote><font face="Calibri">Commercial use is prohibited.<br>
+Any used names, symbols or other copyrighted material is the property of the respective owners.<br>
+We do not take any responsibility if this mod harms your software or 
 hardware.<br>
-For obvious reasons publishing and/or sharing of this mod in any way is not 
+For obvious reasons publishing and/or sharing of this mod in any form is not 
 allowed without this readme file.<br>
-You can upload this mod to your site/server/homepage, but please send us a note.<br>
-We assume that you (end user / player) own license copy of KaM game, in other 
-case you should buy the game before using this mod.</font>
+You can upload this mod to your site/server/homepage, but please let us know first.<br>
+We assume that you (end user/player) own a licensed copy of the game KaM, otherwise you should buy the game before using this mod. Failing to do so will be breaching the license agreement.</font>
 </td>
 	</tr>
 </table>
-  	<p>&nbsp;</div>
+  	<p>&nbsp;</p></div>
   </BODY>
 </HTML>
