- Tweaked Readme.html. I think it's done now

--- a/Release/Readme.html
+++ b/Release/Readme.html
@@ -20,7 +20,7 @@ Brought to you by Krom and Lewin</font></P><hr>
 	<table border="0" cellspacing="0" cellpadding="0">
 		<tr>
 			<td>
-	<img border="0" src="Readme/GUI_0318.gif" width="18" height="26"></td>
+	<img border="0" src="Readme/GUI_0318.gif"></td>
 			<td><B><FONT size="+2" face="Calibri">&nbsp;<a name="Description">Description</a></FONT></B></td>
 		</tr>
 	</table>
@@ -38,22 +38,20 @@ built by enthusiasts. Applications used: Delphi6, OpenGL, OpenAL, zLib.</font><B
 	<table border="0" cellspacing="0" cellpadding="0">
 		<tr>
 			<td>
-	<img border="0" src="Readme/GUI_0310.gif" width="30" height="30"></td>
+	<img border="0" src="Readme/GUI_0310.gif"></td>
 			<td><B><FONT size="+2" face="Calibri">&nbsp;<a name="System_Requirements">System Requirements</a></FONT></B></td>
 		</tr>
 	</table>
 </blockquote>
-<p><font face="Calibri">KaM Remake requires: <br>
-&nbsp;&nbsp;&nbsp; Windows 98, XP or Vista; <br>
-&nbsp;&nbsp;&nbsp; 500MHz or faster processor;<br>
-&nbsp;&nbsp;&nbsp; 256MB or more of RAM; <br>
-&nbsp;&nbsp;&nbsp; 3D graphics accelerator OpenGL 1.4 compliant;<br>
-&nbsp;&nbsp;&nbsp; Sound card.<br>&nbsp;</font></p>
+<p><font face="Calibri">KaM Remake requires: <br>&nbsp;&nbsp;&nbsp; - Windows 98, XP or Vista;
+<br>&nbsp;&nbsp;&nbsp; - 500MHz or faster processor;<br>&nbsp;&nbsp;&nbsp; - 256MB or more of RAM;
+<br>&nbsp;&nbsp;&nbsp; - 3D graphics accelerator OpenGL 1.4 compliant;<br>&nbsp;&nbsp;&nbsp; 
+- Sound card.<br>&nbsp;</font></p>
 <blockquote>
 	<table border="0" cellspacing="0" cellpadding="0">
 		<tr>
 			<td>
-	<img border="0" src="Readme/GUI_0303.gif" width="28" height="27"></td>
+	<img border="0" src="Readme/GUI_0303.gif"></td>
 			<td><B><FONT size="+2" face="Calibri">&nbsp;<a name="Installing">Installing</a></FONT></B></td>
 		</tr>
 	</table>
@@ -71,7 +69,7 @@ drivers available.
 	<table border="0" cellspacing="0" cellpadding="0">
 		<tr>
 			<td>
-	<img border="0" src="Readme/GUI_0312.gif" width="30" height="20"></td>
+	<img border="0" src="Readme/GUI_0312.gif"></td>
 			<td><B><FONT size="+2" face="Calibri">&nbsp;<a name="Gameplay">Gameplay</a></FONT></B></td>
 		</tr>
 	</table>
@@ -84,7 +82,7 @@ Scrolling the <b>Mouse wheel</b> will zoom in and out<b><br>
 &#8592; </b>backspace will reset zoom back to 100%<b><br>
 P</b> pauses the game<br>
 <b>&#8592;&#8593;&#8594;&#8595;</b> cursor keys will move you around the map<br>
-<b>Middle mouse click</b> will place a scout at the cursor to allow you to explore 
+<b>Middle mouse click</b> will place a horse scout at the cursor to allow you to explore 
 the map<br></font></p>
 <p><font face="Calibri"><B>Installing add-on maps:</B><br><B>1.</B> Create a sub-folder in the Maps folder of the KaM Remake and name it, for example, &quot;My New Map&quot;.<br>
 <B>2.</B> Put inside .dat and .map files of the map and name them accordingly &quot;My New Map.dat&quot; and &quot;My New Map.map&quot;. 
@@ -99,7 +97,7 @@ included into the playlist automatically.<br>&nbsp;</font></p>
 	<table border="0" cellspacing="0" cellpadding="0">
 		<tr>
 			<td>
-			<img border="0" src="Readme/GUI_0311.gif" width="26" height="21"></td>
+			<img border="0" src="Readme/GUI_0311.gif"></td>
 			<td><B><FONT size="+2" face="Calibri">&nbsp;<a name="F_A_Q_">F.A.Q.</a></FONT></B></td>
 		</tr>
 	</table>
@@ -121,7 +119,7 @@ file by email either to Krom (<a href="mailto:kromster80@gmail.com">kromster80@g
 	<table border="0" cellspacing="0" cellpadding="0">
 		<tr>
 			<td>
-	<img border="0" src="Readme/GUI_0304.gif" width="29" height="22"></td>
+	<img border="0" src="Readme/GUI_0304.gif"></td>
 			<td><B><FONT size="+2" face="Calibri">&nbsp;<a name="Known_bugs">Known bugs and 
 limitations</a></FONT></B></td>
 		</tr>
@@ -138,7 +136,7 @@ Citizens do not go to eat if they are standing off the road.<br>&nbsp;</font></p
 	<table border="0" cellspacing="0" cellpadding="0">
 		<tr>
 			<td>
-	<img border="0" src="Readme/GUI_0323.gif" width="30" height="30"></td>
+	<img border="0" src="Readme/GUI_0323.gif"></td>
 			<td><B><FONT size="+2" face="Calibri">&nbsp;<a name="Feedback">Feedback</a></FONT></B></td>
 		</tr>
 	</table>
@@ -152,7 +150,7 @@ for improvement - please drop us an email or write on the forum.</font>
 	<table border="0" cellspacing="0" cellpadding="0">
 		<tr>
 			<td>
-	<img border="0" src="Readme/GUI_0314.gif" width="26" height="25"></td>
+	<img border="0" src="Readme/GUI_0314.gif"></td>
 			<td><span style="vertical-align: middle"><B>
 			<FONT size="+2" face="Calibri">&nbsp;<a name="Credits">Credits</a></FONT></B></span></td>
 		</tr>
@@ -167,7 +165,7 @@ The Knight, Litude (Real Hotdog), Merchator, Nick, Thunderwolf and many others) 
 	<table border="0" cellspacing="0" cellpadding="0">
 		<tr>
 			<td>
-	<img border="0" src="Readme/GUI_0322.gif" width="26" height="25"></td>
+	<img border="0" src="Readme/GUI_0322.gif"></td>
 			<td><span style="vertical-align: middle"><B>
 			<FONT size="+2" face="Calibri">&nbsp;<a name="Legal">Legal notice</a></FONT></B></span></td>
 		</tr>
