- Fixed interaction mistake: animals would always interaction with another animal  - Updated Readme a little, still far from done  - Updated todo before demo 3 list  - Highlighting now turns off when you close a message

--- a/Release/Readme.html
+++ b/Release/Readme.html
@@ -82,7 +82,7 @@ Scrolling the <b>Mouse wheel</b> will zoom in and out<b><br>
 &#8592; </b>backspace will reset zoom back to 100%<b><br>
 P</b> pauses the game<br>
 <b>&#8592;&#8593;&#8594;&#8595;</b> cursor keys will move you around the map<br>
-<b>Middle mouse click</b> will place a horse scout at the cursor to allow you to explore 
+<b>Middle mouse click</b> will place a horseman (scout) at the cursor to allow you to explore 
 the map<br></font></p>
 <p><font face="Calibri"><B>Installing add-on maps:</B><br><B>1.</B> Create a sub-folder in the Maps folder of the KaM Remake and name it, for example, &quot;My New Map&quot;.<br>
 <B>2.</B> Put inside .dat and .map files of the map and name them accordingly &quot;My New Map.dat&quot; and &quot;My New Map.map&quot;. 
@@ -114,7 +114,7 @@ at least 1.4.x. If it is less you need to update your graphics card drivers
 message. In this case you should terminate the KaM_Remake from the Task Manager (press 
 Ctrl+Alt+Del, choose KaM Remake and press End Task button).
 <BR>Then browse to the KaM Remake folder and find the file &quot;KaM.log&quot; containing details of the crash. Please send this 
-file by email either to Krom (<a href="mailto:kromster80@gmail.com">kromster80@gmail.com</a>) or Lewin (<a href="mailto:lewinjh@gmail.com">lewinjh@gmail.com</a>) along with details of what you did to make it crash and any other information that might be of use.</font><br>&nbsp;</P>
+file by email either to Krom (<a href="mailto:kromster80@gmail.com">kromster80@gmail.com</a>) or Lewin (<a href="mailto:lewinjh@gmail.com">lewinjh@gmail.com</a>) along with details of what you did to make it crash and any other information that might be of use. If possible please also provide a saved game file from before or after the crash. If you have autosave turned on then it will create a saved game every minute in the 10th (last) slot. Saved games can be found under the "Saves" folder of the Remake. Numbers are the save order as in the game menus, e.g. save01.<FONT color="red">!!!!!!!!!!!!!!!!!txt!!!!!!!!!!!!!!!!!!!</FONT> will be the top save. Providing a saved game - even if it is just an autosave - will make it far easier for us to trace the bug.</font><br>&nbsp;</P>
 <blockquote>
 	<table border="0" cellspacing="0" cellpadding="0">
 		<tr>
@@ -128,10 +128,7 @@ limitations</a></FONT></B></td>
 <p><font face="Calibri">Main menu has fixed size of 1024x768 regardless of window 
 size or fullscreen mode.<br>
 Only single-player maps are supported (ones with !SET_HUMAN_PLAYER line).<br>
-Units will go through one another.<br>
-Fisherman does not catch fish.<br>
-Unit training in the Barracks and Town Hall is not functioning.<br>
-Citizens do not go to eat if they are standing off the road.<br>&nbsp;</font></p>
+Unit training in the Barracks, Town Hall and Siege Workshop is not functioning.<br>&nbsp;</font></p>
 <blockquote>
 	<table border="0" cellspacing="0" cellpadding="0">
 		<tr>
