Updated text files

--- a/Release/Readme.html
+++ b/Release/Readme.html
@@ -25,15 +25,27 @@ Brought to you by Krom and Lewin</font></P><hr>
 		</tr>
 	</table>
 </blockquote>
-<p><font face="Calibri">KaM Remake (we don't have a fancy title yet) is an attempt to reinvigorate the original &quot;Knights and Merchants: The Shattered Kingdom&quot; strategy game. Our goals are to make it work on today's computers and operating systems, as well as to fix the many bugs in the game engine. To do this we have started from scratch, writing our own code for the game engine but using the original resource files.
-This is the first public limited technology preview (demo) featuring the economic side of the game; referred as &quot;mod&quot; or &quot;Remake&quot; from now on. Our aim is to demonstrate the 
+<p><font face="Calibri">KaM Remake (we don't have a fancy title yet) is an attempt to reinvigorate the original &quot;Knights and Merchants: The Shattered Kingdom&quot; strategy game. Our goals are to make it work on today's computers and operating systems, as well as to fix the many bugs in the game engine. To do this we have started from scratch, writing our own code for the game engine but still relying on many original resource files.
+This is third public limited technology preview (demo) featuring the economic side of the game; referred as &quot;mod&quot; or &quot;Remake&quot; from now on. Our aim is to demonstrate the 
 potential and get feedback on functionality. All included &quot;assets&quot; borrowed from 
 KaM (graphics, music, sounds, etc.) are there for testing purposes only, and the final release will not include any of the 
 copyrighted &quot;assets&quot;.<br>
 We assume that you own the original KaM game, otherwise you should buy it - 
 it's available in a number of online gaming stores.<br>
 The KaM Remake executable is freeware and is 
-built by enthusiasts. Applications used: Delphi6, OpenGL, OpenAL, zLib.</font><BR>&nbsp;</p>
+built by enthusiasts. Applications used: Delphi6, Lazarus, OpenGL, OpenAL, zLib.</font><BR>&nbsp;</p>
+<blockquote>
+	<table border="0" cellspacing="0" cellpadding="0">
+		<tr>
+			<td>
+	<img border="0" src="Readme/GUI_0310.gif"></td>
+			<td><B><FONT size="+2" face="Calibri">&nbsp;<a name="Source Code">Source Code</a></FONT></B></td>
+		</tr>
+	</table>
+</blockquote>
+<p><font face="Calibri">KaM Remake source code available at:<br>
+<a href="http://code.google.com/p/castlesand/">
+http://code.google.com/p/castlesand/</a></font><br>&nbsp;</p>
 <blockquote>
 	<table border="0" cellspacing="0" cellpadding="0">
 		<tr>
@@ -43,7 +55,7 @@ built by enthusiasts. Applications used: Delphi6, OpenGL, OpenAL, zLib.</font><B
 		</tr>
 	</table>
 </blockquote>
-<p><font face="Calibri">KaM Remake requires: <br>&nbsp;&nbsp;&nbsp; - Windows 98, XP or Vista;
+<p><font face="Calibri">KaM Remake requires: <br>&nbsp;&nbsp;&nbsp; - Windows 98, XP, Vista or Seven;
 <br>&nbsp;&nbsp;&nbsp; - 500MHz or faster processor;<br>&nbsp;&nbsp;&nbsp; - 256MB or more of RAM;
 <br>&nbsp;&nbsp;&nbsp; - 3D graphics accelerator OpenGL 1.4 compliant;<br>&nbsp;&nbsp;&nbsp; 
 - Sound card.<br>&nbsp;</font></p>
@@ -75,15 +87,17 @@ drivers available.
 	</table>
 </blockquote>
 <p>
-<font face="Calibri"><B>The following shortcuts are available in the game:</B><br>
+<font face="Calibri">
+<b>The following shortcuts are available in the game:</b><br>
 <b>F8</b> speeds up the game pace x10<br>
 <b>F11 </b>will show debugging panel and menu<br>
-Scrolling the <b>Mouse wheel</b> will zoom in and out<b><br>
-&#8592; </b>backspace will reset zoom back to 100%<b><br>
-P</b> pauses the game<br>
+Scrolling the <b>Mouse wheel</b> will zoom in and out<br>
+<b>&#8592; </b>backspace will reset zoom back to 100%<br>
+<b>P</b> pauses the game<br>
 <b>&#8592;&#8593;&#8594;&#8595;</b> cursor keys will move you around the map<br>
 <b>Middle mouse click</b> will place a horseman (scout) at the cursor to allow you to explore 
-the map<br></font></p>
+the map<br>
+//@Lewin:Shall we mention other keys?</font></p>
 <p><font face="Calibri"><B>Installing add-on maps:</B><br><B>1.</B> Create a sub-folder in the Maps folder of the KaM Remake and name it, for example, &quot;My New Map&quot;.<br>
 <B>2.</B> Put inside .dat and .map files of the map and name them accordingly &quot;My New Map.dat&quot; and &quot;My New Map.map&quot;. 
 File names should match folder name exactly.<br><B>3.</B> You can also make an 
