Updated Readme Minor cleanup in code

--- a/Release/Readme.html
+++ b/Release/Readme.html
@@ -38,7 +38,7 @@ built by enthusiasts. Applications used: Delphi6, Lazarus, OpenGL, OpenAL, zLib.
 	<table border="0" cellspacing="0" cellpadding="0">
 		<tr>
 			<td>
-	<img border="0" src="Readme/GUI_0310.gif"></td>
+	<img border="0" src="Readme/GUI_0308.gif"></td>
 			<td><B><FONT size="+2" face="Calibri">&nbsp;<a name="Source Code">Source Code</a></FONT></B></td>
 		</tr>
 	</table>
@@ -91,13 +91,17 @@ drivers available.
 <b>The following shortcuts are available in the game:</b><br>
 <b>F8</b> speeds up the game pace x10<br>
 <b>F11 </b>will show debugging panel and menu<br>
+<b>1-4</b> opens corresponding tab in games menu<br>
+<b>P</b> pauses the game<br>
+<b>W</b> reveals whole map in game<br>
+<b>Esc</b> closes active tab in game menu<br>
+<b>Del</b> deletes opened message in game<br>
+<b>&#8592;&#8593;&#8594;&#8595;</b> cursor keys will move you around the map<br>
 Scrolling the <b>Mouse wheel</b> will zoom in and out<br>
 <b>&#8592; </b>backspace will reset zoom back to 100%<br>
-<b>P</b> pauses the game<br>
-<b>&#8592;&#8593;&#8594;&#8595;</b> cursor keys will move you around the map<br>
 <b>Middle mouse click</b> will place a horseman (scout) at the cursor to allow you to explore 
 the map<br>
-//@Lewin:Shall we mention other keys?</font></p>
+</font></p>
 <p><font face="Calibri"><B>Installing add-on maps:</B><br><B>1.</B> Create a sub-folder in the Maps folder of the KaM Remake and name it, for example, &quot;My New Map&quot;.<br>
 <B>2.</B> Put inside .dat and .map files of the map and name them accordingly &quot;My New Map.dat&quot; and &quot;My New Map.map&quot;. 
 File names should match folder name exactly.<br><B>3.</B> You can also make an 
