- FINALLY finished height effects passability! I wrote a description of what I discovered KaM uses, it's a bit odd. But it matches exactly for the maps I've tested.  - WIP woodcutter choosing best direction, SHOULDN'T BE INCLUDED IN DEMO AS IT IS NOW!!! Uncomment the two lines in Terrain that restore it to previous method if you are going release. Instructions are included with @Krom tag.  - A few more shortcuts added  - Updated Readme/todo list a bit  - Some testing, no crashes or errors found  - ...I think we're ready for the demo...
On a side note I discovered how to set the mouse speed, although it is systemwide not just for our application, so we'd have to remember the system setting if we want it to be different for just our game then reset it on form destroy. Something like that. Anyway, Windows API call is: SystemParametersInfo(SPI_SETMOUSESPEED,0,pointer(aValue),0);
Can also be SPI_GETMOUSESPEED in which case aValue will be filled with the mouse sensitivity. Apparently it ranges from 0..20. Sound familiar? ;)

--- a/Release/Readme.html
+++ b/Release/Readme.html
@@ -11,7 +11,7 @@
 Remake Demo</FONT><BR>
 Brought to you by Krom and Lewin</font></P><hr>
 <p align="center"><font face="Calibri">Readme contents: <br>
-<a href="#Description">Description</a> · <a href="#System_Requirements">System requirements</a> · <a href="#Installing">Installing</a> 
+<a href="#Description">Description</a> · <a href="#Source">Source Code</a> · <a href="#System_Requirements">System requirements</a> · <a href="#Installing">Installing</a> 
 · <a href="#Gameplay">Gameplay</a> · <a href="#F_A_Q_">F.A.Q.</a> ·
 <a href="#Known_bugs">Known bugs</a> · <a href="#Feedback">Feedback</a> ·
 <a href="#Credits">Credits</a> ·
@@ -39,11 +39,11 @@ built by enthusiasts. Applications used: Delphi6, Lazarus, OpenGL, OpenAL, zLib.
 		<tr>
 			<td>
 	<img border="0" src="Readme/GUI_0308.gif"></td>
-			<td><B><FONT size="+2" face="Calibri">&nbsp;<a name="Source Code">Source Code</a></FONT></B></td>
+			<td><B><FONT size="+2" face="Calibri">&nbsp;<a name="Source">Source Code</a></FONT></B></td>
 		</tr>
 	</table>
 </blockquote>
-<p><font face="Calibri">KaM Remake source code available at:<br>
+<p><font face="Calibri">The KaM Remake source code is available at our project page:<br>
 <a href="http://code.google.com/p/castlesand/">
 http://code.google.com/p/castlesand/</a></font><br>&nbsp;</p>
 <blockquote>
@@ -91,11 +91,12 @@ drivers available.
 <b>The following shortcuts are available in the game:</b><br>
 <b>F8</b> speeds up the game pace x10<br>
 <b>F11 </b>will show debugging panel and menu<br>
-<b>1-4</b> opens corresponding tab in games menu<br>
+<b>1-4</b> opens corresponding tab in the game menu<br>
 <b>P</b> pauses the game<br>
-<b>W</b> reveals whole map in game<br>
-<b>Esc</b> closes active tab in game menu<br>
-<b>Del</b> deletes opened message in game<br>
+<b>W</b> reveals the whole map in game<br>
+<b>Esc</b> closes the open message or active tab in the game menu.<br>
+<b>Del</b> deletes the open message in game<br>
+<b>G</b> goes to the location of the open message in game<br>
 <b>&#8592;&#8593;&#8594;&#8595;</b> cursor keys will move you around the map<br>
 Scrolling the <b>Mouse wheel</b> will zoom in and out<br>
 <b>&#8592; </b>backspace will reset zoom back to 100%<br>
@@ -146,7 +147,8 @@ limitations</a></FONT></B></td>
 <p><font face="Calibri">Main menu has fixed size of 1024x768 regardless of window 
 size or fullscreen mode.<br>
 Only single-player maps are supported (ones with !SET_HUMAN_PLAYER line).<br>
-Unit training in the Barracks, Town Hall and Siege Workshop is not functioning.<br>&nbsp;</font></p>
+Unit training in the Barracks, Town Hall and Siege Workshop is not functioning.<br>
+Troop user interface and behaviour is limited.<br>&nbsp;</font></p>
 <blockquote>
 	<table border="0" cellspacing="0" cellpadding="0">
 		<tr>
