--- a/Release/Readme.html
+++ b/Release/Readme.html
@@ -38,18 +38,6 @@ built by enthusiasts. Applications used: Delphi6, Lazarus, OpenGL, OpenAL, zLib.
 	<table border="0" cellspacing="0" cellpadding="0">
 		<tr>
 			<td>
-	<img border="0" src="Readme/GUI_0308.gif"></td>
-			<td><B><FONT size="+2" face="Calibri">&nbsp;<a name="Source">Source Code</a></FONT></B></td>
-		</tr>
-	</table>
-</blockquote>
-<p><font face="Calibri">The KaM Remake source code is available at our project page:<br>
-<a href="http://code.google.com/p/castlesand/">
-http://code.google.com/p/castlesand/</a></font><br>&nbsp;</p>
-<blockquote>
-	<table border="0" cellspacing="0" cellpadding="0">
-		<tr>
-			<td>
 	<img border="0" src="Readme/GUI_0310.gif"></td>
 			<td><B><FONT size="+2" face="Calibri">&nbsp;<a name="System_Requirements">System Requirements</a></FONT></B></td>
 		</tr>
@@ -163,6 +151,20 @@ Troop user interface and behaviour is limited.<br>&nbsp;</font></p>
 If you can offer some help in Delphi coding, menu design, ideas 
 for improvement - please drop us an email or write on the forum.</font>
 <br>&nbsp;
+<blockquote>
+	<table border="0" cellspacing="0" cellpadding="0">
+		<tr>
+			<td>
+	<img border="0" src="Readme/GUI_0308.gif"></td>
+			<td><B><FONT size="+2" face="Calibri">&nbsp;<a name="Source">Source Code</a></FONT></B></td>
+		</tr>
+	</table>
+</blockquote>
+<p><font face="Calibri">The KaM Remake source code is available at our project page:<br>
+<a href="http://code.google.com/p/castlesand">http://code.google.com/p/castlesand</a><br>
+We ecourage you to submit bugs using built-in interface:<br>
+<a href="http://code.google.com/p/castlesand/issues/entry">http://code.google.com/p/castlesand/issues/entry</a><br>
+</font><br>&nbsp;</p>
 <blockquote>
 	<table border="0" cellspacing="0" cellpadding="0">
 		<tr>
