WIP warrior attack target

--- a/Release/Readme.html
+++ b/Release/Readme.html
@@ -84,7 +84,7 @@ drivers available.
 <b>W</b> reveals the whole map in game<br>
 <b>Esc</b> closes the open message or active tab in the game menu.<br>
 <b>Del</b> deletes the open message in game<br>
-<b>G</b> goes to the location of the open message in game<br>
+<b>Spacebar</b> goes to the location of the open message in game<br>
 <b>&#8592;&#8593;&#8594;&#8595;</b> cursor keys will move you around the map<br>
 Scrolling the <b>Mouse wheel</b> will zoom in and out<br>
 <b>&#8592; </b>backspace will reset zoom back to 100%<br>
